// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Merging and Batching Example should generate correct schema 1`] = `
"schema {
  query: Query
}

directive @resolveTo(additionalArgs: ResolveToSourceArgs, filterBy: String, keyField: String, keysArg: String, pubsubTopic: String, requiredSelectionSet: String, result: String, resultType: String, sourceArgs: ResolveToSourceArgs, sourceFieldName: String, sourceName: String, sourceSelectionSet: String, sourceTypeName: String) on FIELD_DEFINITION

type Author {
  books: [Book]
  id: ID
  name: String
}

type Book {
  author: Author @resolveTo(sourceName: "AuthorService", sourceTypeName: "Query", sourceFieldName: "authors", keyField: "authorId", keysArg: "ids")
  authorId: ID
  id: ID
  title: String
}

type Query {
  author(id: ID): Author @merge(keyField: "id")
  authors(ids: [ID]): [Author] @merge(keyField: "id")
  book(id: ID): Book @merge(keyField: "id")
  books: [Book]
}

scalar ResolveToSourceArgs"
`;

exports[`Type Merging and Batching Example should give correct response for example queries: Author.graphql-query-result 1`] = `
{
  "data": {
    "author": {
      "books": [
        {
          "author": {
            "id": "1",
            "name": "Jane Doe",
          },
          "id": "0",
          "title": "Lorem Ipsum",
        },
      ],
      "id": "1",
      "name": "Jane Doe",
    },
  },
}
`;

exports[`Type Merging and Batching Example should give correct response for example queries: Authors.graphql-query-result 1`] = `
{
  "data": {
    "authors": [
      {
        "books": [
          {
            "author": {
              "id": "0",
              "name": "John Doe",
            },
            "id": "1",
            "title": "Dolor Sit Amet",
          },
        ],
        "id": "0",
        "name": "John Doe",
      },
      {
        "books": [
          {
            "author": {
              "id": "1",
              "name": "Jane Doe",
            },
            "id": "0",
            "title": "Lorem Ipsum",
          },
        ],
        "id": "1",
        "name": "Jane Doe",
      },
    ],
  },
}
`;

exports[`Type Merging and Batching Example should give correct response for example queries: Book.graphql-query-result 1`] = `
{
  "data": {
    "book": {
      "author": {
        "books": [
          {
            "id": "1",
            "title": "Dolor Sit Amet",
          },
        ],
        "id": "0",
        "name": "John Doe",
      },
      "id": "1",
      "title": "Dolor Sit Amet",
    },
  },
}
`;

exports[`Type Merging and Batching Example should give correct response for example queries: Books.graphql-query-result 1`] = `
{
  "data": {
    "books": [
      {
        "author": {
          "id": "1",
          "name": "Jane Doe",
        },
        "id": "0",
        "title": "Lorem Ipsum",
      },
      {
        "author": {
          "id": "0",
          "name": "John Doe",
        },
        "id": "1",
        "title": "Dolor Sit Amet",
      },
    ],
  },
}
`;
